<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.StudentLoginActivity">

    <ImageView
        android:id="@+id/StudentLoginImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/student" />

    <TextView
        android:id="@+id/StudentLoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/app_student_login"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StudentLoginImageView" />

    <TextView
        android:id="@+id/StudentLoginNotMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/app_not_member_student"
        app:layout_constraintStart_toStartOf="@+id/StudentLoginTextView"
        app:layout_constraintTop_toBottomOf="@+id/StudentLoginTextView" />

    <TextView
        android:id="@+id/StudentLoginSignUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_signup"
        android:textColor="@color/light_blue"
        app:layout_constraintBottom_toBottomOf="@+id/StudentLoginNotMember"
        app:layout_constraintStart_toEndOf="@+id/StudentLoginNotMember" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/app_email"
        app:layout_constraintStart_toStartOf="@+id/StudentLoginEmailAddressEditText"
        app:layout_constraintTop_toBottomOf="@+id/StudentLoginNotMember" />

    <EditText
        android:id="@+id/StudentLoginEmailAddressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:hint="john.doe@example.com"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_password"
        app:layout_constraintStart_toStartOf="@+id/StudentLoginPasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/StudentLoginEmailAddressEditText" />

    <EditText
        android:id="@+id/StudentLoginPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="2dp"
        android:hint="**********"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/StudentLoginForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_forgot_password"
        app:layout_constraintEnd_toEndOf="@+id/StudentLoginPasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/StudentLoginPasswordEditText" />

    <Button
        android:id="@+id/StudentLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_login"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StudentLoginForgotPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>