<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.TeacherLoginActivity">

    <ImageView
        android:id="@+id/TeacherLoginImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/teacher" />

    <TextView
        android:id="@+id/TeacherLoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/app_teacher_login"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TeacherLoginImageView" />

    <TextView
        android:id="@+id/TeacherLoginNotMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/app_not_member_teacher"
        app:layout_constraintStart_toStartOf="@+id/TeacherLoginTextView"
        app:layout_constraintTop_toBottomOf="@+id/TeacherLoginTextView" />

    <TextView
        android:id="@+id/TeacherLoginSignUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_signup"
        android:textColor="@color/light_blue"
        app:layout_constraintBottom_toBottomOf="@+id/TeacherLoginNotMember"
        app:layout_constraintStart_toEndOf="@+id/TeacherLoginNotMember" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/app_email"
        app:layout_constraintStart_toStartOf="@+id/TeacherLoginEmailAddressEditText"
        app:layout_constraintTop_toBottomOf="@+id/TeacherLoginNotMember" />

    <EditText
        android:id="@+id/TeacherLoginEmailAddressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:hint="john.doe@example.com"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_password"
        app:layout_constraintStart_toStartOf="@+id/TeacherLoginPasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/TeacherLoginEmailAddressEditText" />

    <EditText
        android:id="@+id/TeacherLoginPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="2dp"
        android:hint="**********"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/TeacherLoginForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_forgot_password"
        app:layout_constraintEnd_toEndOf="@+id/TeacherLoginPasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/TeacherLoginPasswordEditText" />

    <Button
        android:id="@+id/TeacherLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_login"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TeacherLoginForgotPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>